--- a/fun_openai_mult.ipynb
+++ b/fun_openai_mult.ipynb
@@ -8,21 +8,17 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "import json\n",
-    "\n",
-    "\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "402d80a0-6027-40e9-946e-908fdec8d2b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Add relevant functions\n",
-    "def get_current_weather(location, unit=\"fahrenheit\"):\n",
-    "    \"\"\"Get the current weather in a given location\"\"\"\n",
-    "    weather_info = {\n",
-    "        \"location\": location,\n",
-    "        \"temperature\": \"72\",\n",
-    "        \"unit\": unit,\n",
-    "        \"forecast\": [\"sunny\", \"windy\"],\n",
-    "    }\n",
-    "    return json.dumps(weather_info)\n",
-    "\n",
-    "\n",
     "def get_bank_names(name):\n",
     "    \"\"\"Return given bank names\"\"\"\n",
     "\n",
@@ -55,22 +51,6 @@
     "    # Step 1: send the conversation and available functions to GPT\n",
     "    messages = [{\"role\": \"user\", \"content\": user_input}]\n",
     "    functions = [\n",
-    "        {\n",
-    "            \"name\": \"get_current_weather\",\n",
-    "            \"description\": \"Get the current weather in a given location\",\n",
-    "            \"parameters\": {\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"location\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
-    "                    },\n",
-    "                    \"unit\": {\"type\": \"string\", \"enum\": [\"celsius\", \"fahrenheit\"]},\n",
-    "                },\n",
-    "                \"required\": [\"location\"],\n",
-    "            },\n",
-    "        },\n",
-    "\n",
     "        {\n",
     "            \"name\": \"get_bank_names\",\n",
     "            \"description\": \"Extract bank name from the sentence\",\n",
@@ -126,21 +106,20 @@
     "        model=\"gpt-3.5-turbo-0613\",\n",
     "        messages=messages,\n",
     "        functions=functions,\n",
-    "        function_call=call_type,  # auto is default, but we'll be explicit\n",
+    "        function_call=call_type,\n",
     "    )\n",
     "    response_message = response[\"choices\"][0][\"message\"]\n",
-    "    print(f'Answer returned by functions: {response[\"choices\"][0][\"message\"][\"function_call\"][\"arguments\"]}')\n",
+    "    print(f'Answer returned by functions: {response[\"choices\"][0][\"message\"][\"function_call\"][\"arguments\"]}\\n')\n",
     "\n",
     "    # Step 2: check if GPT wanted to call a function\n",
     "    if response_message.get(\"function_call\"):\n",
     "        # Step 3: call the function\n",
     "        # Note: the JSON response may not always be valid; be sure to handle errors\n",
     "        available_functions = {\n",
-    "            \"get_current_weather\": get_current_weather,\n",
     "            \"get_bank_names\": get_bank_names,\n",
     "            \"find_period\": find_period,\n",
     "            \"get_conversation_category\": get_conversation_category,\n",
-    "        }  # only one function in this example, but you can have multiple\n",
+    "        }\n",
     "        \n",
     "        function_name = response_message[\"function_call\"][\"name\"]\n",
     "        fuction_to_call = available_functions[function_name]\n",
@@ -165,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cdc75da2-8ef8-400f-8bdc-3e70b14f4f30",
    "metadata": {},
    "outputs": [
@@ -176,20 +155,21 @@
       "Answer returned by functions: {\n",
       "  \"start_year\": \"1998\",\n",
       "  \"end_year\": \"2010\"\n",
-      "}\n",
-      "The period you mentioned, starting in 1998 and ending in 2010, spanned 12 years.\n"
+      "}/n\n",
+      "Final answer: The period you specified, from 1998 to 2010, lasted for 12 years.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "user_input = \"the period started in 1998 and ended in 2010.\"\n",
     "out = run_conversation(user_input)\n",
-    "print(out['choices'][0]['message']['content'])"
+    "print(f\"Final answer: {out['choices'][0]['message']['content']}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a6b0a2bb-5872-4950-947e-83c0ff7195af",
    "metadata": {},
    "outputs": [
@@ -198,41 +178,17 @@
      "output_type": "stream",
      "text": [
       "Answer returned by functions: {\n",
-      "\"name\": \"Deutsche Bank and Swedbank\"\n",
-      "}\n",
-      "The bank names extracted from the sentence \"Deutsche Bank and Swedbank\" are:\n",
-      "- Deutsche Bank\n",
-      "- Swedbank\n"
+      "  \"name\": \"Deutsche Bank and Swedbank\"\n",
+      "}/n\n",
+      "Final answer: The bank names extracted from the sentence \"Deutsche Bank and Swedbank\" are \"Deutsche Bank\" and \"Swedbank\".\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "user_input = \"i want to extract bank names from the following sentence: Deutsche Bank and Swedbank?\"\n",
     "out = run_conversation(user_input)\n",
-    "print(out['choices'][0]['message']['content'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ccf67c81-d5fe-4157-bec9-b1e6ecdf704b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Answer returned by functions: {\n",
-      "  \"location\": \"Boston\"\n",
-      "}\n",
-      "The weather in Boston is currently sunny and windy with a temperature of 72 degrees Fahrenheit.\n"
-     ]
-    }
-   ],
-   "source": [
-    "user_input = \"What's the weather like in Boston?\"\n",
-    "out = run_conversation(user_input)\n",
-    "print(out['choices'][0]['message']['content'])"
+    "print(f\"Final answer: {out['choices'][0]['message']['content']}\\n\")"
    ]
   },
   {
@@ -247,23 +203,26 @@
      "text": [
       "Answer returned by functions: {\n",
       "  \"risk_category\": \"LGD\"\n",
-      "}\n",
-      "Sure, I'd be happy to discuss LGD (Loss Given Default) modeling with you. LGD is a key component in credit risk analysis and refers to the amount of loss that a lender or investor is likely to incur in the event of default by a borrower.\n",
+      "}/n\n",
+      "Final answer: Sure! LGD stands for Loss Given Default, and it is a measure used in credit risk modeling to assess the potential loss that may occur if a borrower defaults on their obligations. LGD modeling is the process of estimating and predicting the percentage of exposure that will be lost in the event of default.\n",
       "\n",
-      "LGD modeling is a process of estimating the potential losses that may occur in the event of default. It involves determining the recovery rate, which is the proportion of a loan or investment that can be recovered in case of default. LGD modeling takes into account various factors such as collateral value, seniority of the asset, industry conditions, and economic factors that affect the recovery of funds.\n",
+      "LGD modeling involves analyzing various factors that contribute to the actual recovery rate in the event of default. These factors can include collateral value, seniority of the debt, loan characteristics, economic conditions, and recovery processes.\n",
       "\n",
-      "There are several approaches to LGD modeling, including statistical models and expert judgment. Statistical models typically use historical data to estimate the potential losses based on factors such as loan characteristics, borrower's creditworthiness, and macroeconomic conditions. Expert judgment models, on the other hand, rely on the expertise of industry professionals who assess the potential recovery based on their experience and knowledge.\n",
+      "The purpose of LGD modeling is to aid financial institutions and lenders in quantifying and managing credit risk. By understanding the potential loss that may be incurred, lenders can set appropriate pricing, make informed lending decisions, and allocate capital effectively.\n",
       "\n",
-      "LGD modeling is crucial for banks, financial institutions, and investors to assess the potential risk associated with their loan portfolios and investments. Accurate LGD estimation helps in determining appropriate risk management strategies, setting credit limits, and pricing loans or investments.\n",
+      "There are various methods used in LGD modeling, such as statistical modeling, historical data analysis, and expert judgment. These methods help in estimating the potential loss based on historical data, macroeconomic factors, and industry-specific knowledge.\n",
       "\n",
-      "If you have any specific questions or want to delve into a particular aspect of LGD modeling, feel free to ask!\n"
+      "The accuracy of LGD models is important as it directly impacts the calculation of credit risk metrics like Economic Capital and Expected Loss. Therefore, validation and ongoing monitoring of LGD models are crucial to ensure their reliability and relevance.\n",
+      "\n",
+      "LGD modeling is a significant aspect of credit risk management and plays a crucial role in assessing and pricing credit risk. It helps lenders and financial institutions to understand the potential loss associated with lending activities and make informed decisions to mitigate risks.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "user_input = \"I would like to discuss LGD modelling\"\n",
     "out = run_conversation(user_input, {\"name\": \"get_conversation_category\"})\n",
-    "print(out['choices'][0]['message']['content'])"
+    "print(f\"Final answer: {out['choices'][0]['message']['content']}\\n\")"
    ]
   }
  ],
