--- a/fun_openai_mult.ipynb
+++ b/fun_openai_mult.ipynb
@@ -155,8 +155,9 @@
       "Answer returned by functions: {\n",
       "  \"start_year\": \"1998\",\n",
       "  \"end_year\": \"2010\"\n",
-      "}/n\n",
-      "Final answer: The period you specified, from 1998 to 2010, lasted for 12 years.\n",
+      "}\n",
+      "\n",
+      "Final answer: The period mentioned, from 1998 to 2010, spans a total of 13 years.\n",
       "\n"
      ]
     }
@@ -179,7 +180,8 @@
      "text": [
       "Answer returned by functions: {\n",
       "  \"name\": \"Deutsche Bank and Swedbank\"\n",
-      "}/n\n",
+      "}\n",
+      "\n",
       "Final answer: The bank names extracted from the sentence \"Deutsche Bank and Swedbank\" are \"Deutsche Bank\" and \"Swedbank\".\n",
       "\n"
      ]
@@ -203,18 +205,25 @@
      "text": [
       "Answer returned by functions: {\n",
       "  \"risk_category\": \"LGD\"\n",
-      "}/n\n",
-      "Final answer: Sure! LGD stands for Loss Given Default, and it is a measure used in credit risk modeling to assess the potential loss that may occur if a borrower defaults on their obligations. LGD modeling is the process of estimating and predicting the percentage of exposure that will be lost in the event of default.\n",
+      "}\n",
       "\n",
-      "LGD modeling involves analyzing various factors that contribute to the actual recovery rate in the event of default. These factors can include collateral value, seniority of the debt, loan characteristics, economic conditions, and recovery processes.\n",
+      "Final answer: Sure, I can help you with LGD (Loss Given Default) modeling. \n",
       "\n",
-      "The purpose of LGD modeling is to aid financial institutions and lenders in quantifying and managing credit risk. By understanding the potential loss that may be incurred, lenders can set appropriate pricing, make informed lending decisions, and allocate capital effectively.\n",
+      "LGD is a key parameter used in credit risk analysis, and it represents the portion of a loan or exposure that is not recoverable in the event of default. In other words, it measures the expected loss given default.\n",
       "\n",
-      "There are various methods used in LGD modeling, such as statistical modeling, historical data analysis, and expert judgment. These methods help in estimating the potential loss based on historical data, macroeconomic factors, and industry-specific knowledge.\n",
+      "There are several approaches to modeling LGD, including:\n",
       "\n",
-      "The accuracy of LGD models is important as it directly impacts the calculation of credit risk metrics like Economic Capital and Expected Loss. Therefore, validation and ongoing monitoring of LGD models are crucial to ensure their reliability and relevance.\n",
+      "1. Statistical Models: These models estimate LGD based on historical data and statistical techniques. They often use regression analysis to identify the key factors that affect the loss given default. These factors may include collateral value, recovery rates, industry factors, and borrower characteristics.\n",
       "\n",
-      "LGD modeling is a significant aspect of credit risk management and plays a crucial role in assessing and pricing credit risk. It helps lenders and financial institutions to understand the potential loss associated with lending activities and make informed decisions to mitigate risks.\n",
+      "2. Credit Ratings-based Models: These models use credit ratings to estimate LGD. They typically assign LGD values to different rating categories based on historical loss experience.\n",
+      "\n",
+      "3. Economic Scenario Models: These models consider the effects of different economic scenarios on LGD. They may use macroeconomic variables such as GDP growth, unemployment rates, and interest rates to estimate LGD in different economic conditions.\n",
+      "\n",
+      "4. Market Price-based Models: These models use market prices of distressed assets or securities to estimate LGD. By analyzing market prices, these models estimate the potential losses in case of default.\n",
+      "\n",
+      "It's important to note that LGD models can vary depending on the type of exposure being analyzed (e.g., corporate loans, mortgages, credit cards) and the specific requirements of the institution or regulatory guidelines.\n",
+      "\n",
+      "Do you have any specific questions or areas of interest regarding LGD modeling that you would like to discuss further?\n",
       "\n"
      ]
     }
