--- a/rwa_calculations.ipynb
+++ b/rwa_calculations.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "1. The purpose of the notenook is to perform RWA calculations as described in the https://www.bis.org/publ/bcbs128.pdf\n",
     "2. The results are tested against test cases as provided by the BIS\n",
-    "The maturity flooring is a simplification (see 32.51 in https://www.bis.org/basel_framework/chapter/CRE/32.htm?inforce=20230101&published=20200327)"
+    "3. The maturity flooring is a simplification (see 32.51 in https://www.bis.org/basel_framework/chapter/CRE/32.htm?inforce=20230101&published=20200327)"
    ]
   },
   {
