--- a/rwa_calculations.ipynb
+++ b/rwa_calculations.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_RWA(exposure_type, PD, LGD, EAD, M=None, S=None):\n",
+    "def calculate_RWA(exposure_type, PD, LGD, EAD, add_on=1.06, M=None, S=None):\n",
     "    \"\"\"\n",
     "    Calculate Risk-Weighted Assets (RWA) for different types of exposures.\n",
     "    \n",
@@ -90,7 +90,7 @@
     "        K = LGD * norm.cdf(((1 - R)**-0.5) * G(PD) + (R / (1 - R)) ** 0.5 * G(0.999)) - PD * LGD\n",
     "    \n",
     "    # Calculate Risk-Weighted Assets RWA\n",
-    "    RWA = K * 12.5 * EAD\n",
+    "    RWA = K * 12.5 * EAD * add_on\n",
     "    \n",
     "    return RWA"
    ]
@@ -107,11 +107,11 @@
      "text": [
       "PD must be between 0 and 1.\n",
       "LGD must be between 0 and 1.\n",
-      "RWA for Residential Mortgage: 78.164469573099\n",
-      "RWA for Qualifying Revolving Retail: 25.709248272925674\n",
-      "RWA for Other Retail: 51.54350486710466\n",
-      "RWA for Corporate Exposure: 107.74702689056434\n",
-      "RWA for SME Corporate Exposure: 85.77235567912422\n"
+      "RWA for Residential Mortgage: 82.85433774748495\n",
+      "RWA for Qualifying Revolving Retail: 27.251803169301215\n",
+      "RWA for Other Retail: 54.63611515913094\n",
+      "RWA for Corporate Exposure: 257.42410788421637\n",
+      "RWA for SME Corporate Exposure: 301.5092152166892\n"
      ]
     }
    ],
@@ -133,12 +133,13 @@
     "EAD = 100  # Exposure at Default\n",
     "M = 3     # Maturity\n",
     "S = 10    # Sales for SME\n",
+    "add_on = 1.06\n",
     "\n",
-    "print(\"RWA for Residential Mortgage:\", calculate_RWA(\"Residential Mortgages\", PD, LGD, EAD))\n",
-    "print(\"RWA for Qualifying Revolving Retail:\", calculate_RWA(\"Qualifying Revolving Retail Exposures\", PD, LGD, EAD))\n",
-    "print(\"RWA for Other Retail:\", calculate_RWA(\"Other Retail Exposures\", PD, LGD, EAD))\n",
-    "print(\"RWA for Corporate Exposure:\", calculate_RWA(\"Corporate Exposures\", PD, LGD, EAD, M))\n",
-    "print(\"RWA for SME Corporate Exposure:\", calculate_RWA(\"Corporate Exposures\", PD, LGD, EAD, M, S))"
+    "print(\"RWA for Residential Mortgage:\", calculate_RWA(\"Residential Mortgages\", PD, LGD, EAD, add_on))\n",
+    "print(\"RWA for Qualifying Revolving Retail:\", calculate_RWA(\"Qualifying Revolving Retail Exposures\", PD, LGD, EAD, add_on))\n",
+    "print(\"RWA for Other Retail:\", calculate_RWA(\"Other Retail Exposures\", PD, LGD, EAD, add_on))\n",
+    "print(\"RWA for Corporate Exposure:\", calculate_RWA(\"Corporate Exposures\", PD, LGD, EAD, M, add_on))\n",
+    "print(\"RWA for SME Corporate Exposure:\", calculate_RWA(\"Corporate Exposures\", PD, LGD, EAD, M, S, add_on))"
    ]
   },
   {
@@ -1083,12 +1084,15 @@
     "df_stacked.columns = ['PD', 'Segment', 'LGD', 'SME', 'Value']\n",
     "\n",
     "# Applying the function row-wise\n",
+    "bis_add_on = 1.0\n",
     "df_stacked['RWA_calc'] = df_stacked.apply(lambda row: calculate_RWA(row['Segment'], \n",
     "                                                                    row['PD'] / 100, \n",
     "                                                                    row['LGD'], \n",
     "                                                                    100, \n",
+    "                                                                    bis_add_on,\n",
     "                                                                    2.5, \n",
-    "                                                                    row['SME']), axis=1)\n",
+    "                                                                    row['SME'],\n",
+    "                                                                    ), axis=1)\n",
     "\n",
     "df_stacked['RWA_calc'] = df_stacked['RWA_calc'].round(3)\n",
     "df_stacked['diff'] = abs(1- df_stacked['RWA_calc'] / df_stacked['Value'])\n",
