--- a/ecb_gdp_backtest_comp.ipynb
+++ b/ecb_gdp_backtest_comp.ipynb
@@ -15,8 +15,8 @@
     "   - Retrieve data for each period-country pair.\n",
     "   - Process and format the retrieved data.\n",
     "   - Consolidate the data into a comprehensive DataFrame.\n",
-    "5. **Finalize Data**: Perform any final data manipulations (currently placeholder).\n",
-    "6. **Display Results**: Present the compiled data in a Data  Frme format.\n",
+    "5. **Create scatterplots with forecasts and actual results**: Create necessary lags\n",
+    "6. **Display Results**: Create charts\n",
     "\n",
     "\n",
     "Source: https://data.ecb.europa.eu/data/datasets/MPD/structure\n",
@@ -562,6 +562,7 @@
     }
    ],
    "source": [
+    "# Create error plots for individual countries\n",
     "pd.options.display.float_format = '{:,.2f}'.format\n",
     "\n",
     "# Filters\n",
