--- a/repo_size.ipynb
+++ b/repo_size.ipynb
@@ -125,7 +125,7 @@
     "            elif file_path.endswith('.ipynb'):\n",
     "                category = \"Jupyter Notebook\"\n",
     "            else:\n",
-    "                category = \"Regular\"\n",
+    "                category = \"Other\"\n",
     "\n",
     "            # Count lines in each file\n",
     "            with open(file_path, 'r', encoding='utf-8', errors='ignore') as f:\n",
@@ -380,7 +380,7 @@
     }
    ],
    "source": [
-    "df.sort_values('Line Count', ascending=False).head(20)"
+    "df.sort_values('Line Count', ascending=False).head(20).reset_index()"
    ]
   }
  ],
