--- a/repo_size.ipynb
+++ b/repo_size.ipynb
@@ -76,15 +76,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Python</td>\n",
-       "      <td>100</td>\n",
-       "      <td>31174</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>70</td>\n",
+       "      <td>20318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Regular</td>\n",
-       "      <td>70</td>\n",
-       "      <td>20318</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>100</td>\n",
+       "      <td>31174</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -95,8 +95,8 @@
        "                        count        sum\n",
        "0       Git-related        28      86819\n",
        "1  Jupyter Notebook        20      36464\n",
-       "2            Python       100      31174\n",
-       "3           Regular        70      20318"
+       "2             Other        70      20318\n",
+       "3            Python       100      31174"
       ]
      },
      "execution_count": 2,
@@ -177,6 +177,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>Directory</th>\n",
        "      <th>File Name</th>\n",
        "      <th>Line Count</th>\n",
@@ -185,140 +186,160 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
        "      <td>.git\\objects\\pack</td>\n",
        "      <td>pack-75c2c9b8daa2b9bdb4a453998b20a9ac78ae3ecf.pack</td>\n",
        "      <td>84714</td>\n",
        "      <td>Git-related</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84</th>\n",
+       "      <th>1</th>\n",
+       "      <td>84</td>\n",
        "      <td>doc\\source\\_images</td>\n",
        "      <td>binning_data_stream.gif</td>\n",
        "      <td>8737</td>\n",
-       "      <td>Regular</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>63</th>\n",
+       "      <th>2</th>\n",
+       "      <td>63</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_binning_2d.ipynb</td>\n",
        "      <td>4964</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
+       "      <th>3</th>\n",
+       "      <td>59</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_binary.ipynb</td>\n",
        "      <td>3794</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
+       "      <th>4</th>\n",
+       "      <td>62</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_binary_under_uncertainty.ipynb</td>\n",
        "      <td>3762</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
+       "      <th>5</th>\n",
+       "      <td>68</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_continuous.ipynb</td>\n",
        "      <td>2882</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
+       "      <th>6</th>\n",
+       "      <td>70</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_counterfactual_binary_target.ipynb</td>\n",
        "      <td>2358</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>77</th>\n",
+       "      <th>7</th>\n",
+       "      <td>77</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_scorecard_monitoring.ipynb</td>\n",
        "      <td>2112</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104</th>\n",
+       "      <th>8</th>\n",
+       "      <td>104</td>\n",
        "      <td>optbinning\\binning</td>\n",
        "      <td>binning_statistics.py</td>\n",
        "      <td>2089</td>\n",
        "      <td>Python</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
+       "      <th>9</th>\n",
+       "      <td>73</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_piecewise_binary.ipynb</td>\n",
        "      <td>2044</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
+       "      <th>10</th>\n",
+       "      <td>78</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_sketch_binary.ipynb</td>\n",
        "      <td>1763</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188</th>\n",
+       "      <th>11</th>\n",
+       "      <td>188</td>\n",
        "      <td>tests\\data</td>\n",
        "      <td>breast_cancer.parquet</td>\n",
        "      <td>1683</td>\n",
-       "      <td>Regular</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72</th>\n",
+       "      <th>12</th>\n",
+       "      <td>72</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_multiclass.ipynb</td>\n",
        "      <td>1659</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
+       "      <th>13</th>\n",
+       "      <td>69</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_continuous_2d.ipynb</td>\n",
        "      <td>1575</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
+       "      <th>14</th>\n",
+       "      <td>67</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_binning_process_telco_churn.ipynb</td>\n",
        "      <td>1557</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>102</th>\n",
+       "      <th>15</th>\n",
+       "      <td>102</td>\n",
        "      <td>optbinning\\binning</td>\n",
        "      <td>binning_process.py</td>\n",
        "      <td>1550</td>\n",
        "      <td>Python</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>74</th>\n",
+       "      <th>16</th>\n",
+       "      <td>74</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_piecewise_continuous.ipynb</td>\n",
        "      <td>1326</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <th>17</th>\n",
+       "      <td>100</td>\n",
        "      <td>optbinning\\binning</td>\n",
        "      <td>binning.py</td>\n",
        "      <td>1234</td>\n",
        "      <td>Python</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
+       "      <th>18</th>\n",
+       "      <td>65</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_binning_process_FICO_xAI.ipynb</td>\n",
        "      <td>1191</td>\n",
        "      <td>Jupyter Notebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75</th>\n",
+       "      <th>19</th>\n",
+       "      <td>75</td>\n",
        "      <td>doc\\source\\tutorials</td>\n",
        "      <td>tutorial_scorecard_binary_target.ipynb</td>\n",
        "      <td>1151</td>\n",
@@ -329,49 +350,71 @@
        "</div>"
       ],
       "text/plain": [
-       "                Directory                                           File Name  \\\n",
-       "30      .git\\objects\\pack  pack-75c2c9b8daa2b9bdb4a453998b20a9ac78ae3ecf.pack   \n",
-       "84     doc\\source\\_images                             binning_data_stream.gif   \n",
-       "63   doc\\source\\tutorials                           tutorial_binning_2d.ipynb   \n",
-       "59   doc\\source\\tutorials                               tutorial_binary.ipynb   \n",
-       "62   doc\\source\\tutorials             tutorial_binary_under_uncertainty.ipynb   \n",
-       "68   doc\\source\\tutorials                           tutorial_continuous.ipynb   \n",
-       "70   doc\\source\\tutorials         tutorial_counterfactual_binary_target.ipynb   \n",
-       "77   doc\\source\\tutorials                 tutorial_scorecard_monitoring.ipynb   \n",
-       "104    optbinning\\binning                               binning_statistics.py   \n",
-       "73   doc\\source\\tutorials                     tutorial_piecewise_binary.ipynb   \n",
-       "78   doc\\source\\tutorials                        tutorial_sketch_binary.ipynb   \n",
-       "188            tests\\data                               breast_cancer.parquet   \n",
-       "72   doc\\source\\tutorials                           tutorial_multiclass.ipynb   \n",
-       "69   doc\\source\\tutorials                        tutorial_continuous_2d.ipynb   \n",
-       "67   doc\\source\\tutorials          tutorial_binning_process_telco_churn.ipynb   \n",
-       "102    optbinning\\binning                                  binning_process.py   \n",
-       "74   doc\\source\\tutorials                 tutorial_piecewise_continuous.ipynb   \n",
-       "100    optbinning\\binning                                          binning.py   \n",
-       "65   doc\\source\\tutorials             tutorial_binning_process_FICO_xAI.ipynb   \n",
-       "75   doc\\source\\tutorials              tutorial_scorecard_binary_target.ipynb   \n",
+       "    index             Directory  \\\n",
+       "0      30     .git\\objects\\pack   \n",
+       "1      84    doc\\source\\_images   \n",
+       "2      63  doc\\source\\tutorials   \n",
+       "3      59  doc\\source\\tutorials   \n",
+       "4      62  doc\\source\\tutorials   \n",
+       "5      68  doc\\source\\tutorials   \n",
+       "6      70  doc\\source\\tutorials   \n",
+       "7      77  doc\\source\\tutorials   \n",
+       "8     104    optbinning\\binning   \n",
+       "9      73  doc\\source\\tutorials   \n",
+       "10     78  doc\\source\\tutorials   \n",
+       "11    188            tests\\data   \n",
+       "12     72  doc\\source\\tutorials   \n",
+       "13     69  doc\\source\\tutorials   \n",
+       "14     67  doc\\source\\tutorials   \n",
+       "15    102    optbinning\\binning   \n",
+       "16     74  doc\\source\\tutorials   \n",
+       "17    100    optbinning\\binning   \n",
+       "18     65  doc\\source\\tutorials   \n",
+       "19     75  doc\\source\\tutorials   \n",
        "\n",
-       "     Line Count          Category  \n",
-       "30        84714       Git-related  \n",
-       "84         8737           Regular  \n",
-       "63         4964  Jupyter Notebook  \n",
-       "59         3794  Jupyter Notebook  \n",
-       "62         3762  Jupyter Notebook  \n",
-       "68         2882  Jupyter Notebook  \n",
-       "70         2358  Jupyter Notebook  \n",
-       "77         2112  Jupyter Notebook  \n",
-       "104        2089            Python  \n",
-       "73         2044  Jupyter Notebook  \n",
-       "78         1763  Jupyter Notebook  \n",
-       "188        1683           Regular  \n",
-       "72         1659  Jupyter Notebook  \n",
-       "69         1575  Jupyter Notebook  \n",
-       "67         1557  Jupyter Notebook  \n",
-       "102        1550            Python  \n",
-       "74         1326  Jupyter Notebook  \n",
-       "100        1234            Python  \n",
-       "65         1191  Jupyter Notebook  \n",
-       "75         1151  Jupyter Notebook  "
+       "                                             File Name  Line Count  \\\n",
+       "0   pack-75c2c9b8daa2b9bdb4a453998b20a9ac78ae3ecf.pack       84714   \n",
+       "1                              binning_data_stream.gif        8737   \n",
+       "2                            tutorial_binning_2d.ipynb        4964   \n",
+       "3                                tutorial_binary.ipynb        3794   \n",
+       "4              tutorial_binary_under_uncertainty.ipynb        3762   \n",
+       "5                            tutorial_continuous.ipynb        2882   \n",
+       "6          tutorial_counterfactual_binary_target.ipynb        2358   \n",
+       "7                  tutorial_scorecard_monitoring.ipynb        2112   \n",
+       "8                                binning_statistics.py        2089   \n",
+       "9                      tutorial_piecewise_binary.ipynb        2044   \n",
+       "10                        tutorial_sketch_binary.ipynb        1763   \n",
+       "11                               breast_cancer.parquet        1683   \n",
+       "12                           tutorial_multiclass.ipynb        1659   \n",
+       "13                        tutorial_continuous_2d.ipynb        1575   \n",
+       "14          tutorial_binning_process_telco_churn.ipynb        1557   \n",
+       "15                                  binning_process.py        1550   \n",
+       "16                 tutorial_piecewise_continuous.ipynb        1326   \n",
+       "17                                          binning.py        1234   \n",
+       "18             tutorial_binning_process_FICO_xAI.ipynb        1191   \n",
+       "19              tutorial_scorecard_binary_target.ipynb        1151   \n",
+       "\n",
+       "            Category  \n",
+       "0        Git-related  \n",
+       "1              Other  \n",
+       "2   Jupyter Notebook  \n",
+       "3   Jupyter Notebook  \n",
+       "4   Jupyter Notebook  \n",
+       "5   Jupyter Notebook  \n",
+       "6   Jupyter Notebook  \n",
+       "7   Jupyter Notebook  \n",
+       "8             Python  \n",
+       "9   Jupyter Notebook  \n",
+       "10  Jupyter Notebook  \n",
+       "11             Other  \n",
+       "12  Jupyter Notebook  \n",
+       "13  Jupyter Notebook  \n",
+       "14  Jupyter Notebook  \n",
+       "15            Python  \n",
+       "16  Jupyter Notebook  \n",
+       "17            Python  \n",
+       "18  Jupyter Notebook  \n",
+       "19  Jupyter Notebook  "
       ]
      },
      "execution_count": 3,
